--- a/retailer-login.html
+++ b/retailer-login.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Retailer Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="login.css">
-</head>
-<body>
-  <div class="login-container">
-    <div class="login-box">
-      <h1>Retailer</h1>
-      <p class="subtitle">login to chainminds.com</p>
-      <form>
-        <input type="email" placeholder="Enter retailer email" required>
-        <input type="password" placeholder="Enter password" required>
-        <button type="submit">Login</button>
-      </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Retailer Login</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="login.css" />
+  </head>
+  <body>
+    <div class="login-container">
+      <div class="login-box">
+        <h1>Retailer</h1>
+        <p class="subtitle">login to chainminds.com</p>
+        <form>
+          <input type="email" placeholder="Enter retailer email" required />
+          <input type="password" placeholder="Enter password" required />
+          <button type="submit" onclick="location.href='nfc_example-page.html'">
+            Login
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
 
-  <!-- Back button placed outside -->
-  <button class="back-btn" onclick="window.location.href='index.html'">Back</button>
-</body>
+    <!-- Back button placed outside -->
+    <button class="back-btn" onclick="window.location.href='index.html'">
+      Back
+    </button>
+  </body>
 </html>
