Importer and Exporter- f-e added

--- a/Importer-home.html
+++ b/Importer-home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manufacture Home</title>
+    <title>Importer Home</title>
     <style>
       body {
         margin: 0;
@@ -116,13 +116,13 @@
     <div class="sidebar">
       <div class="logo">Logo</div>
       <div class="menu">
-        <a href="Manufacturer-home.html" class="active">🏠 Home</a>
-        <a href="Manufacturer-addBatch&Nfc.html">📄 BatchID & NFC</a>
+        <a href="Importer-home.html" class="active">🏠 Home</a>
+        <a href="Importer-addProduct.html">📄 Add Products</a>
         <a href="#">📝 Feed Backs</a>
         <a href="#">⚙️ Settings</a>
       </div>
       <div class="logout">
-        <a href="manufacturer-login.html">⬅ Logout</a>
+        <a href="importer-login.html">⬅ Logout</a>
       </div>
     </div>
 
@@ -130,14 +130,14 @@
     <div class="topbar">
       <div class="profile">
         <span>🔔</span>
-        <span>Admin_1</span>
+        <span>Importer_1</span>
         <img src="photos/puzzle.jpg" alt="Profile" />
       </div>
     </div>
 
     <!-- Main content -->
     <div class="content">
-      <h1>Welcome Manufact_1 !</h1>
+      <h1>Welcome Importer_1 !</h1>
     </div>
   </body>
 </html>
