Retailer and Customer- f-e added

--- a/retailer-login.html
+++ b/retailer-login.html
@@ -18,7 +18,7 @@
         <form>
           <input type="email" placeholder="Enter retailer email" required />
           <input type="password" placeholder="Enter password" required />
-          <button type="submit" onclick="location.href='nfc_example-page.html'">
+          <button type="submit" onclick="location.href='Retailer-home.html'">
             Login
           </button>
         </form>
