--- a/customer-login.html
+++ b/customer-login.html
@@ -1,11 +1,495 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>customer</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Customer — Scan NFC & Lookup Batch</title>
+
+    <!-- Bootstrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <style>
+      :root {
+        --accent: #2d7749;
+        --muted: #6b7b71;
+        --surface: #f7fbf8;
+      }
+      body {
+        background: linear-gradient(180deg, #f3f7f5, #eef4ef);
+        min-height: 100vh;
+        font-family: Inter, system-ui, Arial, sans-serif;
+      }
+      .app {
+        max-width: 960px;
+        margin: 28px auto;
+        padding: 20px;
+      }
+      .top {
+        display: flex;
+        gap: 16px;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 18px;
+      }
+      .brand {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+      }
+      .logo {
+        width: 52px;
+        height: 52px;
+        border-radius: 10px;
+        background: var(--accent);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-weight: 700;
+        font-size: 18px;
+      }
+      .hero-title {
+        font-weight: 700;
+        font-size: 18px;
+        color: #1f3b2b;
+      }
+      .hero-sub {
+        color: var(--muted);
+        font-size: 13px;
+      }
+
+      .card-ui {
+        border-radius: 12px;
+        box-shadow: 0 6px 20px rgba(15, 35, 25, 0.06);
+        overflow: hidden;
+      }
+
+      /* scanner area */
+      .scanner-area {
+        padding: 20px;
+        background: linear-gradient(180deg, #ffffff, #f1fbf6);
+      }
+      .controls {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+      }
+      .btn-accent {
+        background: var(--accent);
+        color: #fff;
+        border: none;
+      }
+      .btn-accent:disabled {
+        opacity: 0.6;
+      }
+
+      .status-badge {
+        font-weight: 600;
+        font-size: 13px;
+        padding: 6px 10px;
+        border-radius: 999px;
+      }
+
+      /* results */
+      .result-area {
+        padding: 20px;
+        background: #fff;
+        border-top: 1px solid #eef6f0;
+        min-height: 140px;
+      }
+      .field-title {
+        font-size: 13px;
+        color: var(--muted);
+      }
+      .field-value {
+        font-weight: 700;
+        color: #163c28;
+      }
+
+      .not-found {
+        color: #9b2b2b;
+        font-weight: 700;
+      }
+
+      /* small helpers */
+      .small-muted {
+        font-size: 13px;
+        color: #6b7b71;
+      }
+      .hint {
+        font-size: 13px;
+        color: #9aa89e;
+        margin-top: 6px;
+      }
+
+      @media (max-width: 560px) {
+        .top {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 8px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="app">
+      <div class="top">
+        <div class="brand">
+          <div class="logo">CM</div>
+          <div>
+            <div class="hero-title">ChainMinds — Verify Product</div>
+            <div class="hero-sub">
+              Scan NFC on the product to validate batch & origin
+            </div>
+          </div>
+        </div>
+
+        <div class="text-end">
+          <div class="small-muted">Customer Portal</div>
+          <small class="hint">Use Chrome on Android over HTTPS for NFC.</small>
+        </div>
+      </div>
+
+      <div class="card card-ui">
+        <!-- Scanner / Controls -->
+        <div class="scanner-area">
+          <div class="d-flex align-items-center justify-content-between mb-2">
+            <div>
+              <div class="small-muted">Scanner</div>
+              <div class="h5 mb-0">Tap product NFC to verify</div>
+            </div>
+
+            <div>
+              <span id="supportBadge" class="status-badge badge bg-info"
+                >Checking...</span
+              >
+            </div>
+          </div>
+
+          <div class="controls mb-2">
+            <button id="startBtn" class="btn btn-accent">📶 Start Scan</button>
+            <button id="stopBtn" class="btn btn-outline-secondary" disabled>
+              ⛔ Stop
+            </button>
+            <button id="demoBtn" class="btn btn-success">🎯 Demo Read</button>
+
+            <div class="ms-auto d-flex gap-2 align-items-center">
+              <label for="manual" class="small-muted mb-0">Manual:</label>
+              <input
+                id="manual"
+                class="form-control form-control-sm"
+                style="width: 200px"
+                placeholder="Enter Batch ID"
+              />
+              <button id="manualSearch" class="btn btn-light btn-sm">
+                Search
+              </button>
+            </div>
+          </div>
+
+          <div class="small-muted">Last read: <span id="lastRead">—</span></div>
+          <div id="quickMsg" class="hint"></div>
+        </div>
+
+        <!-- Result area -->
+        <div class="result-area">
+          <div id="resultNotFound" class="d-none">
+            <div class="not-found">No record found for this Batch ID.</div>
+            <div class="small-muted mt-2">
+              If you believe this is a valid product, contact seller or report
+              the tag.
+            </div>
+          </div>
+
+          <div id="resultCard" class="d-none">
+            <div class="d-flex justify-content-between align-items-start mb-3">
+              <div>
+                <div class="field-title">Batch ID</div>
+                <div id="r_batch" class="field-value">BATCH-XXXX</div>
+              </div>
+              <div class="text-end">
+                <div class="field-title">Status</div>
+                <div id="r_status" class="field-value">Verified</div>
+              </div>
+            </div>
+
+            <div class="row g-2">
+              <div class="col-6 col-md-4">
+                <div class="field-title">Product</div>
+                <div id="r_product" class="field-value">Apples</div>
+              </div>
+              <div class="col-6 col-md-4">
+                <div class="field-title">Manufacturer</div>
+                <div id="r_manf" class="field-value">Green Farms</div>
+              </div>
+              <div class="col-6 col-md-4">
+                <div class="field-title">Harvest Date</div>
+                <div id="r_date" class="field-value">2025-08-01</div>
+              </div>
+              <div class="col-6 col-md-4">
+                <div class="field-title">Location</div>
+                <div id="r_loc" class="field-value">Dhaka, BD</div>
+              </div>
+              <div class="col-6 col-md-4">
+                <div class="field-title">Quantity</div>
+                <div id="r_qty" class="field-value">10 crates</div>
+              </div>
+              <div class="col-12">
+                <div class="field-title">Notes</div>
+                <div id="r_notes" class="small-muted">No special notes</div>
+              </div>
+            </div>
+
+            <div class="mt-3 d-flex gap-2">
+              <button id="verifyBtn" class="btn btn-outline-success btn-sm">
+                🔎 View Full Report
+              </button>
+              <button id="reportBtn" class="btn btn-outline-danger btn-sm">
+                🚩 Report Issue
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center mt-3 small-muted">
+        Page demo uses a local sample database. Replace `sampleData` with your
+        API call.
+      </div>
+    </div>
+
+    <script>
+      /*******************************
+       * Sample "database" of batches
+       * Replace searchBatch() with an API call to your backend in production
+       *******************************/
+      const sampleData = {
+        "BATCH-1001": {
+          batchId: "BATCH-1001",
+          product: "Red Apples",
+          manufacturer: "Green Orchards Ltd",
+          harvestDate: "2025-08-01",
+          location: "Gazipur, Bangladesh",
+          qty: "12 crates",
+          notes: "Organic produce, cold-stored",
+          status: "Genuine",
+        },
+        "BATCH-2002": {
+          batchId: "BATCH-2002",
+          product: "Golden Mango",
+          manufacturer: "Sunrise Farms",
+          harvestDate: "2025-07-20",
+          location: "Rajshahi, Bangladesh",
+          qty: "5 pallets",
+          notes: "Ripe, shipped via refrigerated truck",
+          status: "Genuine",
+        },
+        "BATCH-DEMO-001": {
+          batchId: "BATCH-DEMO-001",
+          product: "Demo Beans",
+          manufacturer: "Demo Farm Co",
+          harvestDate: "2025-01-01",
+          location: "Demo City",
+          qty: "1 crate",
+          notes: "Demo product",
+          status: "Genuine",
+        },
+      };
+
+      // UI elements
+      const supportBadge = document.getElementById("supportBadge");
+      const startBtn = document.getElementById("startBtn");
+      const stopBtn = document.getElementById("stopBtn");
+      const demoBtn = document.getElementById("demoBtn");
+      const manual = document.getElementById("manual");
+      const manualSearchBtn = document.getElementById("manualSearch");
+      const lastRead = document.getElementById("lastRead");
+      const quickMsg = document.getElementById("quickMsg");
+
+      const resultCard = document.getElementById("resultCard");
+      const resultNotFound = document.getElementById("resultNotFound");
+      const r_batch = document.getElementById("r_batch");
+      const r_product = document.getElementById("r_product");
+      const r_manf = document.getElementById("r_manf");
+      const r_date = document.getElementById("r_date");
+      const r_loc = document.getElementById("r_loc");
+      const r_qty = document.getElementById("r_qty");
+      const r_notes = document.getElementById("r_notes");
+      const r_status = document.getElementById("r_status");
+
+      // Web NFC reader reference
+      let ndefReader = null;
+      let scanning = false;
+
+      // Check support
+      function setSupportUI() {
+        if ("NDEFReader" in window) {
+          supportBadge.textContent = "NFC ready";
+          supportBadge.className = "status-badge badge bg-success";
+          quickMsg.textContent = "";
+        } else {
+          supportBadge.textContent = "No NFC";
+          supportBadge.className = "status-badge badge bg-danger";
+          quickMsg.textContent =
+            "Web NFC not supported. Use Chrome on Android (HTTPS) or enter Batch ID manually.";
+        }
+      }
+      setSupportUI();
+
+      // Parse NDEF record safely
+      function decodeTextRecord(record) {
+        try {
+          // record.data may be a DataView
+          const data = record.data;
+          if (data instanceof ArrayBuffer || ArrayBuffer.isView(data)) {
+            const decoder = new TextDecoder(record.encoding || "utf-8");
+            return decoder.decode(data);
+          } else if (typeof data === "string") {
+            return data;
+          } else {
+            // fallback: try stringify
+            return String(data);
+          }
+        } catch (e) {
+          console.error("decodeTextRecord error", e);
+          return "";
+        }
+      }
+
+      // Start scanning
+      async function startScan() {
+        if (!("NDEFReader" in window)) {
+          alert("Web NFC not supported on this device/browser.");
+          return;
+        }
+        try {
+          ndefReader = new NDEFReader();
+          await ndefReader.scan();
+          scanning = true;
+          startBtn.disabled = true;
+          stopBtn.disabled = false;
+          supportBadge.textContent = "Scanning...";
+          supportBadge.className = "status-badge badge bg-warning";
+          quickMsg.textContent = "Bring your phone close to the tag.";
+          ndefReader.onreadingerror = () => {
+            quickMsg.textContent = "Cannot read tag. Try again.";
+          };
+          ndefReader.onreading = (event) => {
+            // attempt to decode a text record (common practice: first text record contains ID)
+            let batchId = "";
+            try {
+              for (const rec of event.message.records) {
+                if (rec.recordType === "text") {
+                  batchId = decodeTextRecord(rec);
+                  if (batchId) break;
+                } else if (rec.recordType === "url") {
+                  batchId = decodeTextRecord(rec);
+                  if (batchId) break;
+                } else if (rec.recordType === "mime") {
+                  batchId = decodeTextRecord(rec);
+                  if (batchId) break;
+                }
+              }
+            } catch (e) {
+              console.error("reading parse error", e);
+            }
+
+            if (!batchId) {
+              // fallback: generate synthetic id
+              batchId = "unknown-" + Math.random().toString(36).slice(2, 8);
+            }
+
+            // display last read
+            lastRead.textContent = `${batchId} • ${new Date().toLocaleTimeString()}`;
+            quickMsg.textContent = "Searching batch...";
+            searchAndShow(batchId);
+          };
+        } catch (err) {
+          console.error("scan start error", err);
+          alert("Could not start scanning: " + err.message);
+        }
+      }
+
+      // Stop scanning
+      function stopScan() {
+        try {
+          if (ndefReader && typeof ndefReader.stop === "function") {
+            ndefReader.stop();
+          }
+        } catch (e) {
+          // some implementations may not have stop()
+        }
+        ndefReader = null;
+        scanning = false;
+        startBtn.disabled = false;
+        stopBtn.disabled = true;
+        supportBadge.textContent = "Ready";
+        supportBadge.className = "status-badge badge bg-success";
+        quickMsg.textContent = "Scan stopped.";
+      }
+
+      // Search function (replace with AJAX fetch to backend in real app)
+      async function searchBatch(batchId) {
+        // Simulate network latency
+        await new Promise((res) => setTimeout(res, 300));
+        return sampleData[batchId] || null;
+      }
+
+      // Show result
+      async function searchAndShow(batchId) {
+        resultCard.classList.add("d-none");
+        resultNotFound.classList.add("d-none");
+
+        const data = await searchBatch(batchId);
+        if (data) {
+          r_batch.textContent = data.batchId;
+          r_product.textContent = data.product;
+          r_manf.textContent = data.manufacturer;
+          r_date.textContent = data.harvestDate;
+          r_loc.textContent = data.location;
+          r_qty.textContent = data.qty;
+          r_notes.textContent = data.notes;
+          r_status.textContent = data.status;
+          resultCard.classList.remove("d-none");
+          quickMsg.textContent = "✅ Batch found";
+          quickMsg.style.color = "";
+        } else {
+          resultNotFound.classList.remove("d-none");
+          quickMsg.textContent = "🔍 No record for " + batchId;
+          quickMsg.style.color = "";
+        }
+      }
+
+      // Demo button
+      demoBtn.addEventListener("click", () => {
+        const demoId = "BATCH-DEMO-001";
+        lastRead.textContent = `${demoId} • ${new Date().toLocaleTimeString()}`;
+        quickMsg.textContent = "Searching demo batch...";
+        searchAndShow(demoId);
+      });
+
+      // Manual search
+      manualSearchBtn.addEventListener("click", () => {
+        const id = manual.value.trim();
+        if (!id) return alert("Enter a batch ID to search.");
+        lastRead.textContent = `${id} • ${new Date().toLocaleTimeString()}`;
+        quickMsg.textContent = "Searching...";
+        searchAndShow(id);
+      });
+
+      // wire buttons
+      startBtn.addEventListener("click", startScan);
+      stopBtn.addEventListener("click", stopScan);
+
+      // On load, set support UI
+      setSupportUI();
+
+      // Optional: If you want to automatically attempt reading once page loads on supported device,
+      // you could call startScan() after a user gesture — but it's best to require user click.
+    </script>
+  </body>
 </html>
