--- a/Exporter-home.html
+++ b/Exporter-home.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exporter Home</title>
     <style>
+      .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
       body {
         margin: 0;
         font-family: Arial, sans-serif;
