--- a/admin-createAcc.html
+++ b/admin-createAcc.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="admin-createAcc.css" />
   </head>
   <body>
+    <style>
+      .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
+    </style>
     <!-- Sidebar -->
     <div class="sidebar">
       <div class="logo">Logo</div>
