--- a/Admin-create-acc-Exporter.html
+++ b/Admin-create-acc-Exporter.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="admin-createAcc.css" />
 
   <style>
+    .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
  
  /* Card container adjustment */
 .card-container {
@@ -131,7 +142,9 @@ form {
 <body>
   <!-- Sidebar -->
   <div class="sidebar">
-    <div class="logo">Logo</div>
+    <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
     <div class="menu">
       <a href="admin-home.html">🏠 Home</a>
       <a href="admin-createAcc.html" class="active">📄 Create Acc</a>
