--- a/Admin-create-acc-Importer.html
+++ b/Admin-create-acc-Importer.html
@@ -7,7 +7,20 @@
   <link rel="stylesheet" href="admin-createAcc.css" />
 
   <style>
+    .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
  
+
+
  /* Card container adjustment */
 .card-container {
   display: flex;
