--- a/Importer-addProduct.html
+++ b/Importer-addProduct.html
@@ -20,6 +20,18 @@
     <link rel="stylesheet" href="admin-createAcc.css" />
 
     <style>
+      .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
+
       body {
         background-color: #f8faf8;
       }
