--- a/Manufacturer-addBatch&Nfc.html
+++ b/Manufacturer-addBatch&Nfc.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="admin-createAcc.css" />
 
     <style>
+      .logo {
+        text-align: center;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo img {
+        width: 100%;
+        max-width: 80px; /* control logo size */
+        height: auto;
+        border-radius: 8px; /* optional, makes it smooth */
+      }
       .form-box {
         background-color: #e1efe4;
         border-radius: 10px;
