--- a/Admin-create-acc-Manufacturer.html
+++ b/Admin-create-acc-Manufacturer.html
@@ -142,7 +142,9 @@ form {
 <body>
   <!-- Sidebar -->
   <div class="sidebar">
-    <div class="logo">Logo</div>
+    <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
     <div class="menu">
       <a href="admin-home.html">🏠 Home</a>
       <a href="admin-createAcc.html" class="active">📄 Create Acc</a>
