--- a/Exporter-addProduct.html
+++ b/Exporter-addProduct.html
@@ -110,7 +110,9 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="logo">Logo</div>
+      <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
       <div class="menu">
         <a href="Exporter-home.html">🏠 Home</a>
         <a href="Exporter-addProduct.html" class="active">📄 Add Products</a>
