--- a/Exporter-home.html
+++ b/Exporter-home.html
@@ -125,7 +125,9 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="logo">Logo</div>
+      <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
       <div class="menu">
         <a href="Exporter-home.html" class="active">🏠 Home</a>
         <a href="Exporter-addProduct.html">📄 Add Products</a>
