--- a/Importer-home.html
+++ b/Importer-home.html
@@ -126,7 +126,9 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="logo">Logo</div>
+      <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
       <div class="menu">
         <a href="Importer-home.html" class="active">🏠 Home</a>
         <a href="Importer-addProduct.html">📄 Add Products</a>
