--- a/Retailer-addProduct.html
+++ b/Retailer-addProduct.html
@@ -109,7 +109,9 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="logo">Logo</div>
+      <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
       <div class="menu">
         <a href="Retailer-home.html">🏠 Home</a>
         <a href="Retailer-addProduct.html" class="active">📄 Add Products</a>
