--- a/admin-createAcc.html
+++ b/admin-createAcc.html
@@ -22,7 +22,9 @@
     </style>
     <!-- Sidebar -->
     <div class="sidebar">
-      <div class="logo">Logo</div>
+      <div class="logo">
+        <img src="photos/ChainMindsLogo.png" alt="Logo" />
+      </div>
       <div class="menu">
         <a href="admin-home.html">🏠 Home</a>
         <a href="admin-createAcc.html" class="active">📄 Create Acc</a>
