--- a/Manufacturer-addBatch&Nfc.html
+++ b/Manufacturer-addBatch&Nfc.html
@@ -131,6 +131,7 @@
                   type="text"
                   id="location"
                   class="form-control"
+                  placeholder="enter your location"
                   required
                 />
               </div>
@@ -155,6 +156,26 @@
                 <input
                   type="text"
                   id="product-weight"
+                  class="form-control"
+                  required
+                />
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label>Harvest Date:</label>
+                <input
+                  type="date"
+                  id="harvestDate"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <div class="col-md-6">
+                <label>Expaire Date:</label>
+                <input
+                  type="date"
+                  id="expaireDate"
                   class="form-control"
                   required
                 />
