--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
         </div>
 
         <!-- Column 4 -->
-        <div
-          class="card customer"
-          onclick="location.href='customer-login.html'"
-        >
+        <div class="card customer" onclick="location.href='customer-Home.html'">
           Customer
         </div>
       </div>
