--- a/admin-createAcc.html
+++ b/admin-createAcc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Create Accounts</title>
-    <link rel="stylesheet" href="admin-createAcc.css" />
+    <link rel="stylesheet" href="css/admin-createAcc.css" />
   </head>
   <body>
     <style>
