--- a/Importer-addProduct.html
+++ b/Importer-addProduct.html
@@ -17,7 +17,7 @@
     />
 
     <!-- Custom Sidebar / Topbar (your previous admin style) -->
-    <link rel="stylesheet" href="admin-createAcc.css" />
+    <link rel="stylesheet" href="css/admin-createAcc.css" />
 
     <style>
       .logo {
