--- a/Manufacturer-addBatch&Nfc.html
+++ b/Manufacturer-addBatch&Nfc.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="admin-createAcc.css" />
+    <link rel="stylesheet" href="css/admin-createAcc.css" />
 
     <style>
       .logo {
